Lisättiin miui 10 käännöksiä

--- a/Finnish/main/MiuiSystemUI.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/MiuiSystemUI.apk/res/values-fi-rFI/strings.xml
@@ -185,85 +185,85 @@
      <string name="accessibility_wifi_name">Connected to %s.</string>
      <string name="accessibility_work_mode">Work mode</string>
      <string name="accessibility_zero_bars">Zero bars.</string>
-     <string name="activity_launch_on_secondary_display_failed_text">"App doesn't support launch on secondary displays."</string>
-     <string name="activity_not_found">Application is not installed on your device</string>
-     <string name="add_tile">Add tile</string>
-     <string name="adjust_button_width">Adjust button width</string>
-     <string name="airplane_mode">Airplane mode</string>
-     <string name="alarm_template">at %1$s</string>
+     <string name="activity_launch_on_secondary_display_failed_text">Sovellus ei tue käynnistämistä toisessa näytössä.</string>
+     <string name="activity_not_found">Sovellus ei ole asennettu laitteellesi</string>
+     <string name="add_tile">Lisää laatta</string>
+     <string name="adjust_button_width">Säädä painikkeen leveys</string>
+     <string name="airplane_mode">Lentokonetila</string>
+     <string name="alarm_template">klo %1$s</string>
      <string name="alarm_template_far">on %1$s</string>
-     <string name="app_info">App info</string>
+     <string name="app_info">Sovellustiedot</string>
      <string name="app_name">Keyguard</string>
-     <string name="auto_disable_screenbuttons_disable_toast_text">Navigation buttons disabled, double tap any button to turn them back on.</string>
-     <string name="auto_disable_screenbuttons_enable_toast_text">Navigation buttons enabled</string>
-     <string name="back">Back</string>
-     <string name="battery">Battery</string>
-     <string name="battery_detail_charging_summary">"Battery saver isn't available during charging"</string>
-     <string name="battery_detail_switch_summary">Reduces performance and background data</string>
-     <string name="battery_detail_switch_title">Battery saver</string>
-     <string name="battery_low_percent_format_saver_started">%s remaining. Battery saver is on.</string>
-     <string name="battery_low_why">Settings</string>
-     <string name="battery_panel_title">Battery usage</string>
-     <string name="battery_saver_confirmation_ok">Turn on</string>
-     <string name="battery_saver_confirmation_title">Turn on battery saver?</string>
-     <string name="battery_saver_notification_action_text">Turn off battery saver</string>
-     <string name="battery_saver_notification_text">Reduces performance and background data</string>
-     <string name="battery_saver_notification_title">Battery saver is on</string>
-     <string name="battery_saver_start_action">Turn on battery saver</string>
-     <string name="block">Block all notifications</string>
-     <string name="branded_monitoring_description_app_personal">"You're connected to %1$s, which can monitor your personal network activity, including emails, apps, and websites."</string>
-     <string name="branded_vpn_footer">Network may be monitored</string>
-     <string name="broadcast_tile">Broadcast tile</string>
-     <string name="bt_is_off">Bluetooth is off</string>
-     <string name="btn_camera">Enter your face</string>
-     <string name="camera_hint">Swipe from icon for Camera</string>
-     <string name="camera_label">Open Camera</string>
+     <string name="auto_disable_screenbuttons_disable_toast_text">Navigointipainikkeet pois käytöstä, tuplanapauta mitä tahansa painiketta ottaaksesi ne takaisin käyttöön.</string>
+     <string name="auto_disable_screenbuttons_enable_toast_text">Navigointipainikkeet käytössä</string>
+     <string name="back">Takaisin</string>
+     <string name="battery">Akku</string>
+     <string name="battery_detail_charging_summary">Virransäästö ei ole käytettävissä latauksen aikana</string>
+     <string name="battery_detail_switch_summary">Vähentää suorituskykyä ja taustalla tapahtuvaa dataa</string>
+     <string name="battery_detail_switch_title">Virransäästö</string>
+     <string name="battery_low_percent_format_saver_started">%s jäljellä. Virransäästö on käytössä.</string>
+     <string name="battery_low_why">Asetukset</string>
+     <string name="battery_panel_title">Akun käyttö</string>
+     <string name="battery_saver_confirmation_ok">Ota käyttöön</string>
+     <string name="battery_saver_confirmation_title">Otetaanko virransäästö käyttöön?</string>
+     <string name="battery_saver_notification_action_text">Poista virransäästö käytöstä</string>
+     <string name="battery_saver_notification_text">Vähentää suorituskykyä ja taustalla tapahtuvaa dataa</string>
+     <string name="battery_saver_notification_title">Virransäästö on käytössä</string>
+     <string name="battery_saver_start_action">Ota virransäästö käyttöön</string>
+     <string name="block">Estä kaikki ilmoitukset</string>
+     <string name="branded_monitoring_description_app_personal">Olet yhteydessä sovellukseen %1$s, joka voi valvoa henkilökohtaista verkkoaktiviteetteja, mukaan lukien sähköposteja, sovelluksia ja verkkosivuja.</string>
+     <string name="branded_vpn_footer">Verkkoa saatetaan valvoa</string>
+     <string name="broadcast_tile">Broadcast laatta</string>
+     <string name="bt_is_off">Bluetooth on pois käytöstä</string>
+     <string name="btn_camera">Syötä kasvosi</string>
+     <string name="camera_hint">Pyyhkäise kuvaketta siirtyäksesi Kameraan</string>
+     <string name="camera_label">Avaa Kamera</string>
      <string name="car_lockscreen_disclaimer_text">Stay fully aware of driving conditions and always obey applicable laws. Directions may be inaccurate, incomplete, dangerous, not suitable, prohibited, or involve crossing administrative areas. Business information may also be inaccurate or incomplete. Data is not real-time, and location accuracy cannot be guaranteed. Do not handle your mobile device or use apps not intended for Android Auto while driving.</string>
-     <string name="car_lockscreen_disclaimer_title">Drive safely</string>
-     <string name="change_theme_reboot">Changing the theme requires a restart.</string>
-     <string name="clear_all_notifications_text">Clear all</string>
-     <string name="click_to_enter_text">Tap to view</string>
-     <string name="clipboard">Clipboard</string>
-     <string name="clock">Clock</string>
+     <string name="car_lockscreen_disclaimer_title">Aja turvallisesti</string>
+     <string name="change_theme_reboot">Teeman muuttaminen vaatii uudelleenkäynnistyksen.</string>
+     <string name="clear_all_notifications_text">Tyhjennä kaikki</string>
+     <string name="click_to_enter_text">Näytä napauttamalla</string>
+     <string name="clipboard">Leikepöytä</string>
+     <string name="clock">Kello</string>
      <string name="clock_12hr_format">hm</string>
      <string name="clock_24hr_format">Hm</string>
-     <string name="clock_seconds">Show clock seconds</string>
-     <string name="clock_seconds_desc">Show clock seconds in the status bar. May impact battery life.</string>
-     <string name="compat_mode_off">Stretch to fill screen</string>
-     <string name="compat_mode_on">Zoom to fill screen</string>
-     <string name="config_navBarLayout">left,back;home;recent,right</string>
+     <string name="clock_seconds">Näytä kellon sekunnit</string>
+     <string name="clock_seconds_desc">Näytä kellon sekunnit tilapalkissa. Saattaa vaikuttaa akunkestoon.</string>
+     <string name="compat_mode_off">Täytä näyttö venyttämällä</string>
+     <string name="compat_mode_on">Täytä näyttö zoomaamalla</string>
+     <string name="config_navBarLayout">vasen,takaisin;koti;viimeaikainen,oikea</string>
      <string name="config_persistentDockedActivityIntentUri" />
      <string name="config_rat_2g">2G</string>
      <string name="config_rat_3g">3G</string>
      <string name="config_rat_4g">4G</string>
      <string name="config_rat_unknown" />
      <string name="config_statusBarComponent">com.android.systemui.statusbar.phone.StatusBar</string>
-     <string name="confirm">Got it</string>
-     <string name="confirm_pin_msg">Enter PIN again</string>
-     <string name="custom_lock_wallpaper_enter">Enter</string>
+     <string name="confirm">Selvä</string>
+     <string name="confirm_pin_msg">Anna Pin-koodi uudelleen</string>
+     <string name="custom_lock_wallpaper_enter">Siirry</string>
      <string name="data_saver">Data saver</string>
-     <string name="default_lockscreen_unlock_hint_text">Swipe up to unlock</string>
-     <string name="default_theme">Default</string>
-     <string name="delete">Delete</string>
+     <string name="default_lockscreen_unlock_hint_text">Avaa lukitus pyyhkäisemällä ylös</string>
+     <string name="default_theme">Oletus</string>
+     <string name="delete">Poista</string>
      <string name="dessert_case">Dessert Case</string>
      <string name="digital_clock_dot">:</string>
-     <string name="disable_vpn">Disable VPN</string>
-     <string name="disconnect_vpn">Disconnect VPN</string>
-     <string name="dnd_is_off">DND is off</string>
-     <string name="do_disclosure_generic">This device is managed by your organization</string>
-     <string name="do_disclosure_with_name">This device is managed by %s</string>
-     <string name="do_not_silence">"Don't silence"</string>
-     <string name="do_not_silence_block">"Don't silence or block"</string>
+     <string name="disable_vpn">Poista VPN käytöstä</string>
+     <string name="disconnect_vpn">Katkaise VPN-yhteys</string>
+     <string name="dnd_is_off">Älä häiritse on pois käytöstä</string>
+     <string name="do_disclosure_generic">Yrityksenä hallitsee tätä laitetta</string>
+     <string name="do_disclosure_with_name">Tätä laitetta hallitsee %s</string>
+     <string name="do_not_silence">Älä hiljennä</string>
+     <string name="do_not_silence_block">Älä hiljennä tai estä</string>
      <string name="doze_brightness_sensor_type" />
      <string name="doze_pickup_subtype_performs_proximity_check" />
-     <string name="drag_to_add_tiles">Drag to add tiles</string>
-     <string name="drag_to_remove_tiles">Drag here to remove</string>
-     <string name="drive_mode_tip_idle">Tap to exit Car mode</string>
-     <string name="drive_mode_tip_idle_notch">Exit Car mode</string>
-     <string name="drive_mode_tip_notch">Car mode on</string>
-     <string name="emergency_call_string">Emergency</string>
-     <string name="empty_shade_text">No notifications</string>
-     <string name="enable_bluetooth_confirmation_ok">Turn on</string>
+     <string name="drag_to_add_tiles">Lisää laattoja raahaamalla</string>
+     <string name="drag_to_remove_tiles">Poista raahaamalla tänne</string>
+     <string name="drive_mode_tip_idle">Poistu Autotilasta napauttamalla</string>
+     <string name="drive_mode_tip_idle_notch">Poistu Autotilasta</string>
+     <string name="drive_mode_tip_notch">Autotila on käytössä</string>
+     <string name="emergency_call_string">Hätäpuhelu</string>
+     <string name="empty_shade_text">Ei ilmoituksia</string>
+     <string name="enable_bluetooth_confirmation_ok">Ota käyttöön</string>
      <string name="enable_bluetooth_message">To connect keyboard to your tablet, turn on Bluetooth first.</string>
      <string name="enable_bluetooth_title">Turn on Bluetooth?</string>
      <string name="enable_demo_mode">Enable demo mode</string>
