Lisättiin miui 10 käännöksiä

--- a/Finnish/main/MiuiSystemUI.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/MiuiSystemUI.apk/res/values-fi-rFI/strings.xml
@@ -264,41 +264,41 @@
      <string name="emergency_call_string">Hätäpuhelu</string>
      <string name="empty_shade_text">Ei ilmoituksia</string>
      <string name="enable_bluetooth_confirmation_ok">Ota käyttöön</string>
-     <string name="enable_bluetooth_message">To connect keyboard to your tablet, turn on Bluetooth first.</string>
-     <string name="enable_bluetooth_title">Turn on Bluetooth?</string>
-     <string name="enable_demo_mode">Enable demo mode</string>
+     <string name="enable_bluetooth_message">Yhdistääksesi näppäimistön tablettiisi, ota Bluetooth ensin käyttöön.</string>
+     <string name="enable_bluetooth_title">Otetaanko Bluetooth käyttöön?</string>
+     <string name="enable_demo_mode">Ota esitystila käyttöön</string>
      <string name="ethernet_label">Ethernet</string>
-     <string name="expanded_header_battery_charged">Charged</string>
-     <string name="expanded_header_battery_charging">Charging</string>
-     <string name="expanded_header_battery_charging_with_time">%s until full</string>
-     <string name="expanded_header_battery_not_charging">Not charging</string>
-     <string name="experimental">Experimental</string>
-     <string name="face_data_input_camera_fail">"Couldn't load camera"</string>
-     <string name="face_data_input_camera_ok">Loading camera…</string>
-     <string name="face_data_input_cancel">Cancel</string>
-     <string name="face_data_input_cancel_msg">"Couldn't add face data"</string>
-     <string name="face_data_input_msg">Place your face inside the frame</string>
-     <string name="face_data_input_ok">Done</string>
-     <string name="face_data_input_ok_msg">Turn on screen to unlock device using your face data.</string>
-     <string name="face_data_input_ok_msg_angle">"Unlock the device with your face when the screen is on.
-(Record your face data including all the required angles.)​"</string>
-     <string name="face_data_input_ok_title">Added successfully</string>
-     <string name="face_data_input_title">Add face data</string>
-     <string name="face_data_introduction_msg">Face data can be used to unlock your device or verify your identity. Add Lock screen password before adding your face data.</string>
-     <string name="face_data_introduction_next">Next</string>
-     <string name="face_data_introduction_title">Face recognition</string>
-     <string name="face_data_manage_delete">Delete face data?</string>
-     <string name="face_data_manage_delete_msg">Delete face data</string>
-     <string name="face_data_manage_delete_sure">"You won't be able to unlock device using your face data after you delete it."</string>
-     <string name="face_data_manage_delete_title">Face data</string>
-     <string name="face_data_manage_unlock_msg">Unlock device using your face data</string>
-     <string name="face_data_manage_unlock_title">Unlock using face data</string>
-     <string name="face_data_siggesstion_next">Next</string>
-     <string name="face_data_siggesstion_next_time">Next (%ds)</string>
-     <string name="face_data_suggesstion_first">Security issues: Face unlock is less secure than a PIN, password, or pattern. Your device might be unlocked with your photo, as well as by people or objects with similar appearance.</string>
-     <string name="face_data_suggesstion_second">"Make sure all parts of your face aren't covered by objects and are clearly visible. Your face should be well-lit as well."</string>
-     <string name="face_unlock_adjust_distance">Make sure the distance between your face and the screen is optimal.</string>
-     <string name="face_unlock_be_on_the_screen">Hold the device in front of your face</string>
+     <string name="expanded_header_battery_charged">Ladattu</string>
+     <string name="expanded_header_battery_charging">Ladataan</string>
+     <string name="expanded_header_battery_charging_with_time">%s kunnes täynnä</string>
+     <string name="expanded_header_battery_not_charging">Ei laturissa</string>
+     <string name="experimental">Kokeellinen</string>
+     <string name="face_data_input_camera_fail">Kameraa ei voitu ladata</string>
+     <string name="face_data_input_camera_ok">Ladataan kameraa…</string>
+     <string name="face_data_input_cancel">Peruuta</string>
+     <string name="face_data_input_cancel_msg">Kasvojen tietoja ei voitu lisätä</string>
+     <string name="face_data_input_msg">Aseta kasvosi kehyksen sisälle</string>
+     <string name="face_data_input_ok">Valmis</string>
+     <string name="face_data_input_ok_msg">Avaa laitteen lukitus kavojesi tiedoilla käynnistämällä näyttö.</string>
+     <string name="face_data_input_ok_msg_angle">"Avaa laitteen lukitus kavoillasi näytön ollessa päällä.
+(Tallenna kasvosi tiedot mukaan lukien kaikki vaaditut kulmat.)​"</string>
+     <string name="face_data_input_ok_title">Lisättiin onnistuneesti</string>
+     <string name="face_data_input_title">Lisää kasvosi tiedot</string>
+     <string name="face_data_introduction_msg">Kasvosi tietoja voidaan käyttää laitteen lukituksen avaamiseen tai henkilöllisyytesi vahvistamiseen. Lisää Lukitusnäytön salasana ennen kasvojesi tietojen lisäämistä.</string>
+     <string name="face_data_introduction_next">Seuraava</string>
+     <string name="face_data_introduction_title">Kasvojentunnistus</string>
+     <string name="face_data_manage_delete">Poistetaanko kasvojen tiedot?</string>
+     <string name="face_data_manage_delete_msg">Poista kasvojen tiedot</string>
+     <string name="face_data_manage_delete_sure">Et voi avata laitteen lukitusta käyttäen kasvojesi tietoja sen poistamisen jälkeen.</string>
+     <string name="face_data_manage_delete_title">Kasvojen tiedot</string>
+     <string name="face_data_manage_unlock_msg">Avaa laitteen lukitus käyttäen kasvojesi tietoja</string>
+     <string name="face_data_manage_unlock_title">Avaa laitteen lukitus käyttäen kasvojen tietoja</string>
+     <string name="face_data_siggesstion_next">Seuraava</string>
+     <string name="face_data_siggesstion_next_time">Seuraava (%d s)</string>
+     <string name="face_data_suggesstion_first">Tietoturvaongelmat: Kasvojentunnistus on vähemmän turvallinen, kuin PIN-koodi, salasana tai kuvio. Laitteesi lukitus on mahdollista avata kuvallasi tai saman näköisellä henkilöllä tai objektilla.</string>
+     <string name="face_data_suggesstion_second">Varmista, että kasvosi alueita ei ole peitetty millään objektilla ja että ne ovat näkyvissä. Kasvosi pitäisi olla myös hyvin valaistut.</string>
+     <string name="face_unlock_adjust_distance">Varmista, että kavosi etäisyys näyttöön on optimaalinen.</string>
+     <string name="face_unlock_be_on_the_screen">Pidä laitetta kasvojesi edessä</string>
      <string name="face_unlock_by_notification_screen_on_msg">You can unlock the device using face data whenever the screen lights up for incoming notifications. This may drain the battery faster.</string>
      <string name="face_unlock_by_notification_screen_on_title">Allow Face unlock when screen lights up</string>
      <string name="face_unlock_check_failed">"Couldn't recognize you"</string>
