--- a/Finnish/main/BugReport.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/BugReport.apk/res/values-fi-rFI/strings.xml
@@ -314,6 +314,7 @@
   <string name="toast_feedback_submitting">Lähetetään…</string>
   <string name="toast_feedbackservice_in_submit">Käsitellään edellistä palautetta…</string>
   <string name="toast_fill_brackets">Raportistasi puuttuu joitain tietoja</string>
+  <string name="toast_loading_app_id">Noudetaan tietoja…</string>
   <string name="toast_log_not_exists">Vaadittu lokitiedosto on poistettu tai sitä ei ole olemassa</string>
   <string name="toast_log_too_large">Ei voi lähettää. Tiedosto on liian suuri.</string>
   <string name="toast_module_required">Valitse kohde</string>
