--- a/Finnish/main/MiuiSystemUI.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/MiuiSystemUI.apk/res/values-fi-rFI/strings.xml
@@ -730,7 +730,11 @@ You're also connected to a VPN, which can monitor your network activity."</strin
 
 "&lt;b&gt;Level 0&lt;/b&gt;" 
 - Block all notifications from the app"</string>
-     <string name="profile_owned_footer">Profile may be monitored</string>
+     <string name="profile_owned_footer">Profiilia saatetaan valvoa</string>
+     <string name="prompt_danger">Vaara</string>
+     <string name="prompt_detecting">Havaitaan</string>
+     <string name="prompt_safe">Turvallinen</string>
+     <string name="prompt_unknown">Tuntematon</string>
      <string name="qs_customize">Allow long-press customize in Quick Settings</string>
      <string name="qs_customize_info">Info</string>
      <string name="qs_customize_remove">Remove</string>
@@ -771,7 +775,7 @@ You're also connected to a VPN, which can monitor your network activity."</strin
      <string name="quick_settings_dnd_none_label">Total silence</string>
      <string name="quick_settings_dnd_priority_label">Priority only</string>
      <string name="quick_settings_drivemode_label">Car mode</string>
-     <string name="quick_settings_dual_location_label">GPS</string>
+     <string name="quick_settings_dual_location_label">Kaksois-GPS</string>
      <string name="quick_settings_edit_label">Edit</string>
      <string name="quick_settings_flashlight_label">Flashlight</string>
      <string name="quick_settings_hotspot_label">Hotspot</string>
@@ -1716,14 +1720,13 @@ Pyyhkäise alas lukitaksesi"</string>
   <string name="status_bar_recent_guide_top">Pyyhkäise ylös sulkeaksesi</string>
   <string name="status_bar_recent_inspect_item_title">Sovelluksen tiedot</string>
   <string name="status_bar_recent_memory_info1">%1$st / %2$st käytettävissä</string>
-  <string name="status_bar_recent_memory_info2"/>
   <string name="status_bar_recent_remove_item_title">Poista listalta</string>
   <string name="status_bar_recording_back">Palaa takaisin Ääninauhuriin</string>
   <string name="status_bar_recording_pause">Nauhoitus pysäytetty</string>
-  <string name="status_bar_safepay_risk">Maksuympäristö on riskialtis!</string>
-  <string name="status_bar_safepay_safe">Maksuympäristo on turvallinen.</string>
-  <string name="status_bar_safepay_scanning">Tunnistetaan maksuympäristöä...</string>
-  <string name="status_bar_safepay_unknown">Maksujen turvallisuus on tuntematon.</string>
+  <string name="status_bar_safepay_risk">Maksamisen riskejä löytyi</string>
+  <string name="status_bar_safepay_safe">Maksamisen riskejä ei löytynyt</string>
+  <string name="status_bar_safepay_scanning">Tarkistetaan maksuympäristöä…</string>
+  <string name="status_bar_safepay_unknown">Maksuympäristöä ei voitu tarkistaa</string>
   <string name="status_bar_settings_airplane">Lentokonetila</string>
   <string name="status_bar_settings_signal_meter_disconnected">Ei internet-yhteyttä</string>
   <string name="status_bar_settings_signal_meter_wifi_nossid">Wi-Fi yhdistetty</string>
