--- a/Finnish/main/Provision.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/Provision.apk/res/values-fi-rFI/strings.xml
@@ -1,10 +1,5 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
-  <!-- ei vielä käännetty -->
-  <string name="sim_card_detection_mobile_not_available">"SIM card couldn't connect to the network"</string>
-     <string name="sim_scard_detecting_check_mobile_not_available">"Your SIM card couldn't connect to a valid carrier network. Make sure you have sufficient funds on your balance and try to connect again."</string>
-     <string name="start_up_slogan" />
-     <!-- ei vielä käännetty -->
   <string name="accessibility_enabled">Esteettömyys käytössä.</string>
   <string name="agree">Hyväksy</string>
   <string name="agree_terms">Olen lukenut ja hyväksyn Palveluehdot ja Tietosuojakäytännön.</string>
@@ -72,9 +67,12 @@ Näytä valitun näppäimistön Tietosuojakäytäntö."</string>
   <string name="sim_card_detecting_title">SIM-kortin tarkastus</string>
   <string name="sim_card_detection">Aseta SIM-kortti</string>
   <string name="sim_card_detection_info">Asettaaksesi SIM-korttisi, lue laitteen mukana tulleet ohjeet.</string>
+  <string name="sim_card_detection_mobile_not_available">SIM-kortti ei voinut yhdistää verkkoon</string>
   <string name="sim_dectection_next">Jatka</string>
   <string name="sim_redetection">Tarkista uudelleen</string>
+  <string name="sim_scard_detecting_check_mobile_not_available">SIM-korttisi ei voinut yhdistää toimivaan operaattorin verkkoon. Varmista, että datapaketissasi on tarpeeksi saldoa ja yritä yhdistää uudelleen.</string>
   <string name="skip_underline">Ohita tämä vaihe</string>
+  <string name="start_up_slogan">Paras kokonäytön kokemus</string>
   <string name="summary_not_set">Ei asetettu</string>
   <string name="system_navigation_mode">Järjestelmän navigointitila</string>
   <string name="terms_of_use">Käyttöehdot</string>
