--- a/Finnish/main/MiuiSystemUI.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/MiuiSystemUI.apk/res/values-fi-rFI/strings.xml
@@ -298,67 +298,67 @@
      <string name="face_data_suggesstion_second">Varmista, että kasvosi alueita ei ole peitetty millään objektilla ja että ne ovat näkyvissä. Kasvosi pitäisi olla myös hyvin valaistut.</string>
      <string name="face_unlock_adjust_distance">Varmista, että kavosi etäisyys näyttöön on optimaalinen.</string>
      <string name="face_unlock_be_on_the_screen">Pidä laitetta kasvojesi edessä</string>
-     <string name="face_unlock_by_notification_screen_on_msg">You can unlock the device using face data whenever the screen lights up for incoming notifications. This may drain the battery faster.</string>
-     <string name="face_unlock_by_notification_screen_on_title">Allow Face unlock when screen lights up</string>
-     <string name="face_unlock_check_failed">"Couldn't recognize you"</string>
-     <string name="face_unlock_close_screen">Get closer to the screen</string>
-     <string name="face_unlock_down">Raise your head</string>
-     <string name="face_unlock_identify_error">A recognition error occurred</string>
-     <string name="face_unlock_not_found">"Couldn't recognize you"</string>
-     <string name="face_unlock_offset_bottom">Lower your phone a bit</string>
-     <string name="face_unlock_offset_left">Move to the right</string>
-     <string name="face_unlock_offset_right">Move to the left</string>
-     <string name="face_unlock_offset_top">Raise your phone a bit</string>
-     <string name="face_unlock_open_eye">Open your eyes a bit wider</string>
-     <string name="face_unlock_passwork">Use password</string>
-     <string name="face_unlock_passwork_and_fingerprint">Use password or face data</string>
-     <string name="face_unlock_quality">"Couldn't see your face clearly"</string>
-     <string name="face_unlock_reenter_content">Face unlock algorithm is being updated. Tap to record face data again.</string>
-     <string name="face_unlock_reenter_title">Record your face data again.</string>
-     <string name="face_unlock_reveal_eye">Make your eyes visible</string>
-     <string name="face_unlock_reveal_mouth">Make your lips visible</string>
-     <string name="face_unlock_rise">Lower your head</string>
-     <string name="face_unlock_rotated_left">Turn your head to the right</string>
-     <string name="face_unlock_rotated_right">Turn your head to the left</string>
-     <string name="face_unlock_stay_away_screen">Stay 25 to 40cm away from the screen</string>
-     <string name="fingerprint_add_text">The fingerprint interface was updated. Add your fingerprint again.</string>
-     <string name="fingerprint_add_title">Add fingerprint</string>
-     <string name="fingerprint_again_identified_msg">Your fingerprint is active now. Use it to unlock the device, or enter password.</string>
-     <string name="fingerprint_enter_second_psw_msg">Enter Second space password after rebooting device to be able to use fingerprint recognition</string>
-     <string name="fingerprint_enter_second_psw_msg_oldman">"Can't enter Second space while in Lite mode"</string>
-     <string name="fingerprint_enter_second_psw_title">Enter Second space password</string>
-     <string name="fingerprint_not_identified_msg">Too many unsuccessful attempts. Enter password now or try using your fingerprint in a few seconds.</string>
-     <string name="fingerprint_not_identified_msg_lock">Too many unsuccessful attempts. Enter password now.</string>
-     <string name="fingerprint_not_identified_title">Enter password</string>
-     <string name="fingerprint_not_recognized">Not recognized</string>
-     <string name="fingerprint_try_again_msg">"Couldn't verify fingerprint, try again."</string>
-     <string name="fingerprint_try_again_text">Try again</string>
-     <string name="forced_resizable_secondary_display">App may not work on a secondary display.</string>
-     <string name="forget_password_string">Forgot password</string>
-     <string name="go_to_web">Go to web</string>
-     <string name="got_it">Got it</string>
-     <string name="guest_exit_guest">Remove guest</string>
-     <string name="guest_exit_guest_dialog_message">All apps and data in this session will be deleted.</string>
-     <string name="guest_exit_guest_dialog_remove">Remove</string>
-     <string name="guest_exit_guest_dialog_title">Remove guest?</string>
-     <string name="guest_new_guest">Add guest</string>
-     <string name="guest_nickname">Guest</string>
-     <string name="guest_notification_remove_action">REMOVE GUEST</string>
-     <string name="guest_notification_text">To delete apps and data, remove guest user</string>
-     <string name="guest_notification_title">Guest user</string>
-     <string name="guest_wipe_session_dontwipe">Yes, continue</string>
-     <string name="guest_wipe_session_message">Do you want to continue your session?</string>
-     <string name="guest_wipe_session_title">Welcome back, guest!</string>
-     <string name="guest_wipe_session_wipe">Start over</string>
-     <string name="gxzw_press_harder">Press a bit harder</string>
-     <string name="gxzw_try_again">Try again</string>
-     <string name="gxzw_try_more_again">Try again</string>
-     <string name="gxzw_use_password">Use your password to unlock</string>
-     <string name="headset">Headset</string>
-     <string name="hidden_notifications_cancel">No thanks</string>
-     <string name="hidden_notifications_setup">Set up</string>
-     <string name="hidden_notifications_text">See them before you unlock</string>
-     <string name="hidden_notifications_title">Get notifications faster</string>
+     <string name="face_unlock_by_notification_screen_on_msg">Voit avata laitteen lukituksen kasvojesi tiedoilla, kun näyttö menee päälle saapuvista ilmoituksista. Tämä saattaa kuluttaa akkua nopeammin.</string>
+     <string name="face_unlock_by_notification_screen_on_title">Salli Kasvojentunnistus kun näyttö menee päälle</string>
+     <string name="face_unlock_check_failed">Sinua ei voitu tunnistaa</string>
+     <string name="face_unlock_close_screen">Siirry lähemmäksi näyttöä</string>
+     <string name="face_unlock_down">Nosta päätäsi</string>
+     <string name="face_unlock_identify_error">Tapahtui tunnistusvirhe</string>
+     <string name="face_unlock_not_found">Sinua ei voitu tunnistaa</string>
+     <string name="face_unlock_offset_bottom">Laskepuhelintasi hieman</string>
+     <string name="face_unlock_offset_left">Liiku oikealle</string>
+     <string name="face_unlock_offset_right">Liiku vasemmalle</string>
+     <string name="face_unlock_offset_top">Nosta puhelintasi hieman</string>
+     <string name="face_unlock_open_eye">Avaa silmäsi leveämmäksi</string>
+     <string name="face_unlock_passwork">Käytä salasanaa</string>
+     <string name="face_unlock_passwork_and_fingerprint">Käytä salasanaa tai kasvojen tietoja</string>
+     <string name="face_unlock_quality">Kasvojasi ei nähty kunnolla</string>
+     <string name="face_unlock_reenter_content">Kasvojentunnistusalgoritmia päivitetään. Tallenna kasvojen tiedot uudelleen napauttamalla.</string>
+     <string name="face_unlock_reenter_title">Tallenna kasvojesi tiedot uudelleen.</string>
+     <string name="face_unlock_reveal_eye">Näytä silmäsi</string>
+     <string name="face_unlock_reveal_mouth">Näytä huulesi</string>
+     <string name="face_unlock_rise">Laske päätäsi</string>
+     <string name="face_unlock_rotated_left">Käännä päätäsi oikealle</string>
+     <string name="face_unlock_rotated_right">Käännä päätäsi vasemmalle</string>
+     <string name="face_unlock_stay_away_screen">Pysy 25-40 cm etäisyydellä näytöstä</string>
+     <string name="fingerprint_add_text">Sormenjälkikäyttöliittymä päivitettiin. Lisää sormenjälkesi uudelleen.</string>
+     <string name="fingerprint_add_title">Lisää sormenjälki</string>
+     <string name="fingerprint_again_identified_msg">Sormenjälkesi on nyt aktiivinen. Käytä sitä laitteen lukituksen avaamiseen tai anna salasana.</string>
+     <string name="fingerprint_enter_second_psw_msg">Anna Toisen tilan salasana laitteen uudelleenkäynnistyksen jälkeen käyttääksesi sormenjälkitunnistusta</string>
+     <string name="fingerprint_enter_second_psw_msg_oldman">Toiseen tilaan ei voi siirtyä Yksinkertaistetusta tilasta</string>
+     <string name="fingerprint_enter_second_psw_title">Anna Toisen tilan salasana</string>
+     <string name="fingerprint_not_identified_msg">Liian monta epäonnistunutta yritystä. Anna salasana nyt tai käytä sormenjälkeä muutaman sekunnin kuluttua.</string>
+     <string name="fingerprint_not_identified_msg_lock">Liian monta epäonnistunutta yritystä. Anna salasana nyt.</string>
+     <string name="fingerprint_not_identified_title">Anna salasana</string>
+     <string name="fingerprint_not_recognized">Ei tunnistettu</string>
+     <string name="fingerprint_try_again_msg">Sormenjälkeä ei voitu vahvistaa, yritä uudelleen.</string>
+     <string name="fingerprint_try_again_text">Yritä uudelleen</string>
+     <string name="forced_resizable_secondary_display">Sovellus ei välttämättä toimi toisella näytöllä.</string>
+     <string name="forget_password_string">Unohdin salasanan</string>
+     <string name="go_to_web">Siirry verkkosivulle</string>
+     <string name="got_it">Selvä</string>
+     <string name="guest_exit_guest">Poista vieras</string>
+     <string name="guest_exit_guest_dialog_message">Istunnon kaikki sovellukset ja tiedot poistetaan.</string>
+     <string name="guest_exit_guest_dialog_remove">Poista</string>
+     <string name="guest_exit_guest_dialog_title">Poistetaanko vieras?</string>
+     <string name="guest_new_guest">Lisää vieras</string>
+     <string name="guest_nickname">Vieras</string>
+     <string name="guest_notification_remove_action">POISTA VIERAS</string>
+     <string name="guest_notification_text">Poistaaksesi sovellukset ja tiedot, poista vieras-käyttäjä</string>
+     <string name="guest_notification_title">Vieras-käyttäjä</string>
+     <string name="guest_wipe_session_dontwipe">Kyllä, jatka</string>
+     <string name="guest_wipe_session_message">Haluatko jatkaa istuntoasi?</string>
+     <string name="guest_wipe_session_title">Tervetuloa takaisin, vieras!</string>
+     <string name="guest_wipe_session_wipe">Aloita alusta</string>
+     <string name="gxzw_press_harder">Paina hieman lujempaa</string>
+     <string name="gxzw_try_again">Yritä uudelleen</string>
+     <string name="gxzw_try_more_again">Yritä uudelleen</string>
+     <string name="gxzw_use_password">Avaa lukitus käyttämällä salasanaasi</string>
+     <string name="headset">Kuulokkeet</string>
+     <string name="hidden_notifications_cancel">Ei kiitos</string>
+     <string name="hidden_notifications_setup">Määritä</string>
+     <string name="hidden_notifications_text">Näe ne ennen lukituksen avaamista</string>
+     <string name="hidden_notifications_title">Saa ilmoituksia nopeammin</string>
      <string name="high_temp_dialog_message">"Your phone will automatically try to cool down. You can still use your phone, but it may run slower.
 
 Once your phone has cooled down, it will run normally."</string>
